--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Ella Boutique",
   "icons": [
     {
-      "src": "logo.jpg",
+      "src": "logo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/jpg"
     },
     {
-      "src": "logo.jpg",
+      "src": "logo.ico",
       "type": "image/jpg",
       "sizes": "192x192"
     },
     {
-      "src": "logo.jpg",
+      "src": "logo.ico",
       "type": "image/jpg",
       "sizes": "512x512"
     }
